bug 134845 - avoid dividing by zero during pixel rounding. a=asa, adt=jamiejr, sr=attinasi, r=kin